# onix

./: .gitignore  CMakeLists.txt
onix/: CMakeLists.txt
onix-core/: it.hpp  macros.hpp  pq.hpp
onix-interaction/: CMakeLists.txt  interaction_all.cpp  interaction_all.hpp  interfaces.hpp  migration.cc  onix-interaction.cc
onix-interaction/domain/models/: contact.cpp  contact.hpp  interaction.cpp  interaction.hpp  type.cpp  type.hpp
onix-interaction/infrastructure/persistence/: pq.hpp
onix-interaction/interfaces/: contact-create.cpp  contact-list.cpp  interaction-create.cpp  interaction-list.cpp  type-create.cpp  type-search.cpp
onix-lead/: CMakeLists.txt  onix-lead-migration.cc  onix-lead.cc  ws.hpp
onix-lead/ws/: shared.cpp  shared.hpp
onix-lead/ws/lead/: create-seen.cpp  create.cpp  list.cpp
onix-lead/ws/source/: create.cpp  list.cpp
onix/interaction/: CMakeLists.txt  interaction_all.cpp  interaction_all.hpp  onix-interaction.cc
resources/: crow_all.h
